<resources>
    <string name="app_name">Ricky and Morty</string>
    <string name="primary_color">Characters</string>
    <string name="character_content">Character Image</string>
    <string name="character_image">Character Image</string>
    <string name="separator"> - </string>

    <string name="location_text">Last known location:</string>
    <string name="episode_text">First seen in:</string>

    <string name="detail_episodes_text">Episodes</string>
    <string name="detail_status_text">Status</string>
    <string name="detail_origin_text">Origin</string>
    <string name="detail_gender_text">Status</string>
    <string name="detail_type_text">Type</string>
</resources>